<resources>
    <string name="app_name">Secours LSF</string>
    <string name="title_activity_video_pompier">VideoPompierActivity</string>
    <string name="title_activity_video_police">VideoPoliceActivity</string>
    <string name="abecedaire">Abécédaire</string>
    <string name="abordage_victime">Abordage victime</string>
    <string name="bilan_circonstanciel">Bilan circonstanciel</string>
    <string name="bilan_primaire">Bilan primaire</string>
    <string name="bilan_secondaire">Bilan secondaire</string>
    <string name="renseignements">Renseignements</string>
    <string name="secours_routier">Secours routier</string>
    <string name="clavier_lsf">Clavier LSF</string>
    <string name="clavier">Clavier</string>
    <string name="texte">Texte</string>
    <string name="title_activity_groupe_pompier">GroupePompierActivity</string>
    <string name="title_activity_groupe_police">GroupePoliceActivity</string>
    <string name="title_activity_clavier_pompier">ClavierPompierActivity</string>
    <string name="title_activity_clavier_inverse_pompier">ClavierInversePompierActivity</string>
    <string name="title_activity_clavier_police">ClavierPoliceActivity</string>
    <string name="title_activity_clavier_inverse_police">ClavierInversePoliceActivity</string>
    <string name="title_activity_corps">CorpsActivity</string>
    <string name="zero">zero</string>
    <string name="un">un</string>
    <string name="deux">deux</string>
    <string name="trois">trois</string>
    <string name="quatre">quatre</string>
    <string name="cinq">cinq</string>
    <string name="six">six</string>
    <string name="sept">sept</string>
    <string name="huit">huit</string>
    <string name="neuf">neuf</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="vide">vide</string>
    <string name="effacer">effacer</string>
    <string name="tout_effacer">Tout effacer</string>
    <string name="version">"Version "</string>
    <string name="oui">oui</string>
    <string name="non">non</string>
    <string name="corps">Corps</string>
    <string name="video">Vidéo</string>
    <string name="rechercher_video">Rechercher une vidéo</string>
    <string name="a_propos">A propos</string>
    <string name="cgu">Conditions générales d\'utilisation</string>
    <string name="pdc">Politiques de confidentialité</string>
    <string name="logosdis">logosdis</string>
    <string name="logobs">logobs</string>
    <string name="accouchement">accouchement</string>
    <string name="horloge">Horloge</string>
    <string name="calendrier">Calendrier</string>
    <string name="mois_suivant">moisSuivant</string>
    <string name="mois_precedent">moisPrecedent</string>
    <string name="annee_suivante">anneeSuivante</string>
    <string name="annee_precedente">anneePrecedente</string>
    <string name="vitesse">Vitesse</string>
    <string name="minuteur">Minuteur</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="dessin">Dessin</string>
    <string name="dix">dix</string>
    <string name="credits">Crédits</string>
    <string name="fleche_droite">fleche_droite</string>
    <string name="lune">lune</string>
    <string name="soleil">soleil</string>
    <string name="horloge_matin">horloge_matin</string>
    <string name="aiguille_minutes">aiguille_minutes</string>
    <string name="aiguille_heures">aiguille_heures</string>
    <string name="aiguille_secondes">aiguille_secondes</string>
    <string name="compteur">compteur</string>
    <string name="aiguille">aiguille</string>
    <string name="voiture_lente">voiture_lente</string>
    <string name="voiture_rapide">voiture_rapide</string>
    <string name="icone_secondes">icone_secondes</string>
    <string name="icone_minutes">icone_minutes</string>
    <string name="voiture">Voiture</string>
    <string name="augmenter_places">augmenter places</string>
    <string name="reduire_places">reduire places</string>
    <string name="siege_avant">siege_avant\n</string>
    <string name="places10">10 PLACES</string>
    <string name="places7">7 PLACES</string>
    <string name="places5">5 PLACES</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="logoapp">logoapp</string>
    <string name="inverser">inverser</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="echelle_haut_plus">echelle_haut_plus</string>
    <string name="echelle_haut">echelle_haut</string>
    <string name="echelle_moyen_haut">echelle_moyen_haut</string>
    <string name="echelle_moyen_bas">echelle_moyen_bas</string>
    <string name="echelle_bas">echelle_bas</string>
    <string name="echelle_bas_plus">echelle_bas_plus</string>
    <string name="le_plus_de_douleur_possible">Le plus de douleur possible</string>
    <string name="douleur_tres_intense">Douleur très intense</string>
    <string name="douleur_intense">Douleur intense</string>
    <string name="inconfort_modere">Inconfort modéré</string>
    <string name="benigne">Bénigne</string>
    <string name="tres_bien">Très bien</string>
    <string name="epelez_un_mot_en_lsf">Epelez un mot en LSF ...</string>
    <string name="espace">espace</string>
    <string name="accueil">Accueil</string>
    <string name="parametres">Paramètres</string>
    <string name="pompier">Pompier</string>
    <string name="police">Police</string>
    <string name="logopolice">logopolice</string>
    <string name="monter">monter</string>
    <string name="points_permis">Points permis</string>
    <string name="descendre">descendre</string>
    <string name="retrait_permis">Retrait permis</string>
    <string name="abordage">Abordage</string>
    <string name="documents">Documents</string>
    <string name="securite_routiere">Sécurité routière</string>
    <string name="bijoux">bijoux</string>
    <string name="sac">sac</string>
    <string name="telephone">téléphone</string>
    <string name="portefeuille">portefeuille</string>
    <string name="vetements">vetements</string>
    <string name="carte_identite">carte d\'identité</string>
    <string name="clefs">clefs</string>
    <string name="velo">vélo</string>
    <string name="objets_trouves">Objets trouvés</string>
    <string name="collier">Collier</string>
    <string name="montre">Montre</string>
    <string name="bague">Bague</string>
    <string name="carte_identite_elec">carte d\'identité électronique</string>
    <string name="carte_vitale">carte vitale</string>
    <string name="passeport">passeport</string>
    <string name="permis">permis de conduire</string>
    <string name="carte_bancaire">carte bancaire</string>
    <string name="choisir_une_couleur">Choisir une couleur</string>
    <string name="precedent">précédent</string>
    <string name="suivant">suivant</string>
    <string name="cheque">chèque</string>
    <string name="bagages">bagages</string>
    <string name="fuite">Fuite</string>
    <string name="moins">moins</string>
    <string name="plus">plus</string>
    <string name="carte">Carte</string>
    <string name="description_physique">Description physique</string>
    <string name="description_corps">description\ncorps</string>
    <string name="description_visage">description\nvisage</string>
    <string name="details_visage">détails\nvisage</string>
    <string name="description_vestimentaire">description\nvestimentaire</string>
    <string name="a_sexe">a. sexe</string>
    <string name="b_couleur_peau">b. couleur peau</string>
    <string name="c_taille">c. taille</string>
    <string name="d_corpulence">d. corpulence</string>
    <string name="bague_chevaliere">Bague / chevalière</string>
    <string name="dix_euros">10,00 €</string>
    <string name="apple">Apple</string>
    <string name="aixam">Aixam</string>
    <string name="center_icon">center_icon</string>
    <string name="colorpicker">colorPicker</string>
    <string name="couleurselectionnee">couleurSelectionnee</string>
    <string name="default_emergency_service">Default Emergency Service</string>
    <string name="service_par_defaut">Service par défaut</string>
    <string name="synthese">synthèse</string>
    <string name="corps_homme">corps homme</string>
    <string name="corps_femme">corps femme</string>
    <string name="visage">visage</string>
    <string name="cheveux">cheveux</string>
    <string name="yeux">yeux</string>
    <string name="nez">nez</string>
    <string name="moustache">moustache</string>
    <string name="bouche">bouche</string>
    <string name="barbe">barbe</string>
    <string name="allow_export_summary_pdf">Allow export of the summary in .pdf</string>
    <string name="exporter_en_pdf">exporter en pdf</string>
    <string name="intervention">intervention</string>
    <string name="video_couleur">Vidéo couleur</string>
    <string name="licence_to_unlock_copyright_modules">Licence to unlock copyright modules</string>
    <string name="licenceUnlockModulesDescription">Saisir la licence en MAJUSCULES avec des tirets (format: XXXX-XXXX-XXXX-XXXX)</string>
    <string name="licence_police">Licence (police)</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX-XXXX-XXXX-XXXX</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="supprimer_licence">Supprimer licence</string>
    <string name="perte_points">Perte points</string>
    <string name="video_nombre">Vidéo nombre</string>
    <string name="video_places">Vidéo places</string>
    <string name="disable_emergency_service">Disable Emergency Service</string>
</resources>