<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <restriction
        android:key="defaultEmergencyService"
        android:title="@string/default_emergency_service"
        android:restrictionType="choice"
        android:entries="@array/defaultEmergencyServiceList"
        android:entryValues="@array/defaultEmergencyServiceList" />

    <restriction
        android:key="disableEmergencyService"
        android:title="@string/disable_emergency_service"
        android:restrictionType="choice"
        android:entries="@array/disableEmergencyServiceList"
        android:entryValues="@array/disableEmergencyServiceList" />

    <restriction
        android:key="allowExportSummaryPdf"
        android:title="@string/allow_export_summary_pdf"
        android:restrictionType="bool"
        android:defaultValue="true" />

    <restriction
        android:key="licenceUnlockModules"
        android:title="@string/licence_to_unlock_copyright_modules"
        android:description="@string/licenceUnlockModulesDescription"
        android:restrictionType="string"
        android:defaultValue="" />

</restrictions>