<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorpsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/undo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/undo"
            android:onClick="onClickUndo"
            android:src="@drawable/undo_disabled"
            android:scaleType="fitXY"
            android:background="@null" />

        <ImageView
            android:id="@+id/redo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/redo"
            android:onClick="onClickRedo"
            android:src="@drawable/redo_disabled"
            android:scaleType="fitXY"
            android:background="@null" />

    </LinearLayout>

    <Button
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="onClickVideo"
        android:text="@string/video" />

    <!--
    <TextView
        android:id="@+id/texte_saisir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAlignment="center"
        android:text="@string/saisir"/>
        -->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="375dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--
                <TableRow>

                    <Button
                        android:id="@+id/plaie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickPlaie"
                        android:text="@string/P" />

                    <Button
                        android:id="@+id/traumatisme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickTraumatisme"
                        android:text="@string/T" />

                    <Button
                        android:id="@+id/deformation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickDeformation"
                        android:text="@string/D" />

                    <Button
                        android:id="@+id/brulure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickBrulure"
                        android:text="@string/B" />

                    <Button
                        android:id="@+id/hemorragie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickHemorragie"
                        android:text="@string/H" />

                    <Button
                        android:id="@+id/fracture_ouverte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickFractureOuverte"
                        android:text="@string/FO" />

                    <Button
                        android:id="@+id/douleur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickDouleur"
                        android:text="@string/DL" />

                    <Button
                        android:id="@+id/section"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="#FFD5D6D6"
                        android:onClick="onClickSection"
                        android:text="@string/S" />
                </TableRow>
-->

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/corps"
                        android:layout_width="350dp"
                        android:layout_height="350dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/corps"
                        android:src="@drawable/corps" />

                </FrameLayout>

            </TableLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_gravity="end">

        <LinearLayout
            android:id="@+id/echelle1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/echelle_haut_plus"
                android:contentDescription="@string/echelle_haut_plus"
                android:src="@drawable/echelle_haut_plus"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/echelle_haut"
                android:contentDescription="@string/echelle_haut"
                android:src="@drawable/echelle_haut"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/echelle_moyen_haut"
                android:contentDescription="@string/echelle_moyen_haut"
                android:src="@drawable/echelle_moyen_haut"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/echelle_moyen_bas"
                android:contentDescription="@string/echelle_moyen_bas"
                android:src="@drawable/echelle_moyen_bas"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/echelle_bas"
                android:contentDescription="@string/echelle_bas"
                android:src="@drawable/echelle_bas"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/echelle_bas_plus"
                android:contentDescription="@string/echelle_bas_plus"
                android:src="@drawable/echelle_bas_plus_selection"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/echelle2"
            android:layout_width="32dp"
            android:layout_height="300dp"
            android:layout_toEndOf="@id/echelle1">

            <SeekBar
                android:id="@+id/regle_douleur"
                android:layout_width="300dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:max="100"
                android:thumb="@drawable/point_regle_vert"
                android:rotation="270" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/echelle3"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_toEndOf="@id/echelle2"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/_10"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_9"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_8"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_7"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_6"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_5"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_4"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_3"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_2"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_1"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/_0"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/echelle4"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/echelle3">

            <TextView
                android:text="@string/le_plus_de_douleur_possible"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/douleur_tres_intense"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/douleur_intense"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/inconfort_modere"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/benigne"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/tres_bien"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>