<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".police.ObjetsTrouvesPoliceActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="2"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/bijoux"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/bijoux"
            android:onClick="goToBijoux"
            android:scaleType="fitCenter"
            android:src="@drawable/bijoux" />

        <ImageButton
            android:id="@+id/sac"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/sac"
            android:onClick="goToSac"
            android:scaleType="fitCenter"
            android:src="@drawable/sac" />

        <ImageButton
            android:id="@+id/telephone"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/telephone"
            android:onClick="goToTelephone"
            android:scaleType="fitCenter"
            android:src="@drawable/telephone" />

        <ImageButton
            android:id="@+id/portefeuille"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/portefeuille"
            android:onClick="goToPortefeuille"
            android:scaleType="fitCenter"
            android:src="@drawable/portefeuille" />

        <ImageButton
            android:id="@+id/vetements"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/vetements"
            android:onClick="goToVetements"
            android:scaleType="fitCenter"
            android:src="@drawable/vetements" />

        <ImageButton
            android:id="@+id/carteId"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/carte_identite"
            android:onClick="goToDocuments"
            android:scaleType="fitCenter"
            android:src="@drawable/carte_identite" />

        <ImageButton
            android:id="@+id/clefs"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/clefs"
            android:onClick="goToClefs"
            android:scaleType="fitCenter"
            android:src="@drawable/clefs" />

        <ImageButton
            android:id="@+id/velo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@null"
            android:contentDescription="@string/velo"
            android:onClick="goToVelo"
            android:scaleType="fitCenter"
            android:src="@drawable/velo" />

    </GridLayout>


</LinearLayout>